# nu_plugin_file

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml  flake.nix
.github/workflows/: release.yml
src/: executable.rs  extensions.rs  kind.rs  magic.rs  main.rs
