[package]
name = "nu_plugin_file"
version = "0.11.0"
authors = ["Darren Schroeder", "glcraft"]
edition = "2021"
repository = "https://github.com/fdncred/nu_plugin_file"
description = "a nushell plugin called file"
license = "AGPL-3.0-only"
exclude = ["tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nushell dependencies
nu-plugin = "0.100.0"
nu-protocol = "0.100.0"
nu-path = "0.100.0"

# for local development, you can use a path dependency
# nu-plugin = { path = "../nushell/crates/nu-plugin", version = "0.98.0" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", version = "0.98.0" }
# nu-path = { path = "../nushell/crates/nu-path", version = "0.98.0" }

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
specta = "1.0.5"
home = "0.5.9"
itertools = "0.13.0"
goblin = { version = "0.9.2", optional = true }

[dev-dependencies]
nu-plugin-test-support = "0.100.0"
# nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }

[features]
default = ["executables"]
executables = ["goblin"]

[profile.release]
opt-level = "s"     # Optimize for size
strip = "debuginfo"
lto = "thin"

[profile.dev]
opt-level = 0
